--- a/assets/css/Naeem.css
+++ b/assets/css/Naeem.css
@@ -6,6 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
 
     margin: 0;
@@ -83,6 +84,7 @@ ul {
 .fs_32 {
     font-size: 32px;
 }
+
 .fs_36 {
     font-size: 36px;
 }
@@ -182,10 +184,12 @@ ul {
 .Nunito_family {
     font-family: Nunito;
 }
-.roboto-family{
+
+.roboto-family {
     font-family: Roboto;
 }
-.mulish-family{
+
+.mulish-family {
     font-family: Mulish;
 }
 
@@ -194,8 +198,9 @@ ul {
 .main_color {
     color: #3684A4;
 }
-.light-main-bg{
-    background-color:#E4F1F6 ;
+
+.light-main-bg {
+    background-color: #E4F1F6;
 }
 
 .main_bg {
@@ -249,10 +254,13 @@ ul {
 .button_bg {
     background-color: #EBF3F6 !important;
 }
-.light-green{
-    color:#536C73;
-}
 
+.light-green {
+    color: #536C73;
+}
+.th-bg{
+    background-color:#F9FAFB !important;
+}
 
 /* ----------------------------Main Padding---------------------------- */
 .p_80 {
@@ -278,6 +286,11 @@ ul {
 
 .border1 {
     border: 1.3px solid #D0D5DD !important;
+}
+
+.border-radius-rounded {
+    border: 1.5px solid #079455;
+    border-radius: 9999px;
 }
 
 .table-bg {
@@ -639,6 +652,9 @@ th {
     text-decoration-skip-ink: none;
     color: black !important;
 }
+.flatpickr-current-month{
+    padding: 0 !important;
+}
 
 .flatpickr-day.inRange {
     font-family: Inter !important;
@@ -861,7 +877,7 @@ th {
 
 
 /* -----------check switch ------------ */
-.form-check-input {
+.global-switch {
     -webkit-appearance: none;
     appearance: none;
     width: 48px;
@@ -874,7 +890,7 @@ th {
     transition: background-color 0.42 ease-in-out;
 }
 
-.form-check-input::before {
+.global-switch::before {
     content: '';
     position: absolute;
     top: 2px;
@@ -887,11 +903,11 @@ th {
 }
 
 
-.form-check-input:checked {
-    background-color: #0d6efd;
+.global-switch:checked {
+    background-color: #092550 !important;
 }
 
-.form-check-input:checked::before {
+.global-switch:checked::before {
     transform: translateX(15px);
 }
 
@@ -901,9 +917,10 @@ input:focus {
     outline: none !important;
     box-shadow: none !important;
 }
-input{
+
+input {
     height: 44px;
-    background-color:#FCFCFD !important;
+    background-color: #FCFCFD !important;
 }
 
 .benefits-forms-inputs {
@@ -1089,40 +1106,44 @@ thead tr th:last-child {
 }
 
 /* ----------------------------------------User Profile--------------------------------------- */
-.user-profile-div{
+.user-profile-div {
     height: 140px;
     padding: 24px;
     background: linear-gradient(45deg, #3684A4 0%, #F4F4F4 100%);
 
 }
-.div-margin{
+
+.div-margin {
     margin-top: -40px;
     padding: 0 32px;
 }
-.user-profile-form input, select{
-background-color:#FCFCFD;
-border: 1px solid #D0D5DD;
-font-size: 14px;
-font-family: Plus Jakarta Sans;
-font-weight: 400;
-color:#344054;
-height: 44px !important;
+
+.user-profile-form input,
+select {
+    background-color: #FCFCFD;
+    border: 1px solid #D0D5DD;
+    font-size: 14px;
+    font-family: Plus Jakarta Sans;
+    font-weight: 400;
+    color: #344054;
+    height: 44px !important;
 }
-.user-profile-form input::placeholder{
-font-size: 14px;
-font-family: Plus Jakarta Sans;
-font-weight: 400;
-color:#344054;
+
+.user-profile-form input::placeholder {
+    font-size: 14px;
+    font-family: Plus Jakarta Sans;
+    font-weight: 400;
+    color: #344054;
 }
 
 
 .custom-label {
-    border: 2px solid #ededed5f;
-   
+    border: 1.5px solid #D0D5DD;
+
 }
 
 .custom-label.border-blue {
-    border: 2px solid #3684A4;
+    border: 1.5px solid #3684A4;
 }
 
 /* input[type='checkbox']{
@@ -1138,7 +1159,121 @@ color:#344054;
     background-color: rgb(210, 51, 51) !important;
     transition: background-color 0.3s, border-color 0.3s;
 } */
+/* -----------------------------Avatar for Tables---------------------------------- */
+.avatar-stack {
+    display: flex;
+    align-items: center;
+}
 
+.avatar-stack img,
+.avatar-stack .avatar-extra {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 3px solid #fff;
+    object-fit: cover;
+}
+
+.avatar-stack img {
+    margin-left: -10px;
+}
+
+.avatar-stack .avatar-extra {
+    margin-left: -10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f0f0f0;
+    font-weight: bold;
+    color: #555;
+    cursor: pointer;
+}
+
+.avatar-stack .avatar-extra:hover {
+    background-color: #e0e0e0;
+}
+
+.user-profile-billing-table thead{
+border-collapse:collapse!important;
+}
+.user-profile-table-main{
+border:1.2px solid #EAECF0 !important;
+border-radius:12px!important;
+}
+.border-table{
+    border:1px solid #EAECF0 !important;
+    border-left:0px !important;
+    border-right:0px !important;
+}
+input[type="text"]{
+    font-family: Plus Jakarta Sans;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: #344054;
+}
+input[type="text"]::placeholder{
+    font-family: Plus Jakarta Sans;
+font-size: 16px;
+font-weight: 400;
+line-height: 24px;
+text-align: left;
+text-underline-position: from-font;
+text-decoration-skip-ink: none;
+color:#344054;
+}
+input:is([type="text"], [type="password"], [type="number"], [type="date"]):focus{
+    border:1.7px solid #3684A4!important;
+    outline: 0px!important;
+    box-shadow: none!important;
+}
+table>:not(caption)>*>*{
+    background-color:transparent !important;
+}
+.border-added{
+    border:2px solid #3684A4!important;
+}
+
+input[type="number"].no-spinner::-webkit-outer-spin-button,
+input[type="number"].no-spinner::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+/* ----------------------------avatars----------------------------- */
+.avatar-group {
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.avatar {
+    border-radius: 50%;
+    text-align: center;
+    margin-right: -8px;  
+
+}
+.avatar img{
+    border:2px solid rgb(255, 255, 255);
+    border-radius:50%;
+}
+
+.avatar-group .more {
+    background-color: #F2F4F7;
+    font-size: 12px;
+    font-weight: 600;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    height: 36px;
+    width: 36px;
+    border: 1px solid #00000014;
+    padding: 2px;
+    
+}
 
 
 
