--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -327,7 +327,7 @@ input[type="radio"]:checked {
     width: 18px !important; 
     height: 18px !important;
 }
-input[type="checkbox"] {
+.global-check[type="checkbox"] {
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -335,15 +335,16 @@ input[type="checkbox"] {
     width: 18px !important; 
     height: 18px !important;
     background-image: url(../images/employer-ease-pics/checkbox-unchecked.svg);
-    background-size: cover;
+    background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
     cursor: pointer;
     border: none; 
 }
-input[type="checkbox"]:checked {
+
+.global-check[type="checkbox"]:checked {
     background-image: url(../images/employer-ease-pics/checkbox-checked.svg);
-    background-size: cover;
+    background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
     width: 18px !important; 
@@ -364,7 +365,8 @@ input[type="checkbox"]:checked {
     font-size: 14px;
 }
 .over__flow {
-    max-height: 650px;
+    /* max-height: 650px; */
+    max-height: 450px;
     overflow-y: auto;
     overflow-x: hidden;
     padding-right: 5px;
@@ -454,8 +456,26 @@ input[type="checkbox"]:checked {
         padding: 20px;
     }
 }
+@media screen and (max-width: 900px) {
+    #myVideo-2{
+        display: flex;
+        justify-content: center;
+        margin: 0 auto;
+    }
+    .get_started_im{
+        display: none;
+    }
+    .over__flow{
+        max-height: unset;
+    }
+}
+
 @media screen and (max-width: 600) {
     .h_50vh_sm{
         height: 50vh !important;
     }
+    .global-check[type="checkbox"]:checked{
+        width: 37px;
+    }
+   
 }
