--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -450,7 +450,10 @@ body {
 
     .dashboard-content,
     .dashbord-2 .naivgation-header {
-        padding: 16px;
+        padding: 8px;
+    }
+    .dashboard-content{
+        margin-top: 78px;
     }
 }
 
