--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -25,7 +25,6 @@
     font-style: normal;
 }
 
-
 h1,
 h2,
 h3,
@@ -79,7 +78,6 @@ body {
     bottom: 0;
     border-top-right-radius: 8px !important;
     background-color: white;
-
 }
 
 .sidebar .nav-item.custom-nav-item.active svg path {
@@ -94,7 +92,6 @@ body {
     outline: none;
     box-shadow: none !important;
     border: 0.5px solid rgb(207, 207, 207) !important;
-
 }
 
 .header-input {
@@ -102,7 +99,6 @@ body {
     box-shadow: none !important;
     border: 0.5px solid rgb(207, 207, 207) !important;
     padding-left: 40px !important;
-
 }
 
 .mt-68 {
@@ -148,7 +144,6 @@ body {
     background: #555;
 }
 
-
 .nav-item {
     display: flex;
     text-decoration: none;
@@ -162,18 +157,20 @@ body {
 .nav-item.active {
     background: rgba(54, 132, 164, 1);
 }
-.sub-menu-active .accordion-button:not(.collapsed)::after{
-    background-image:url('../images/employer-ease-pics/chevron-down.svg')!important;
+
+.sub-menu-active .accordion-button:not(.collapsed)::after {
+    background-image: url('../images/employer-ease-pics/chevron-down.svg') !important;
     width: 26px;
     background-position: center left;
     padding-right: 22px
 }
-.accordion-button:not(.collaped)::after{
-    background-image:url('../images/employer-ease-pics/chevron-down.svg')!important;
+
+.accordion-button:not(.collaped)::after {
+    background-image: url('../images/employer-ease-pics/chevron-down.svg') !important;
     width: 20px;
     background-position: center left;
     margin-right: 5px;
- }
+}
 
 .sub-menu-active {
     padding-top: 8px !important;
@@ -200,7 +197,6 @@ body {
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
     color: #6F7784;
-
 }
 
 .accordion-button:not(.collapsed) {
@@ -211,11 +207,9 @@ body {
 /* .accordion-button:not(.collapsed)::after {
     background-image: url('../images/employer-ease-pics/che') !important;
 }
-
 .accordion-button::after {
     background-image: url('../images/employer-ease-pics/che') !important;
 } */
-
 .dashbord-menu .nav-item.active h2 {
     font-family: Plus Jakarta Sans;
     font-size: 16px;
@@ -229,24 +223,21 @@ body {
     color: white;
 }
 
-
 .nav-item.active svg path {
     stroke: #FFFFFF;
 }
-
 
 .dashbord-2 {
     width: calc(100% - 245px);
     /* max-width: 1168px; */
     background-color: #d2d2d2;
-
 }
 
 .dropdown-menu.show {
     right: 0;
     left: auto;
     box-shadow: 2px 2px 16px 0px #00000012;
-    border:0px;
+    border: 0px;
 }
 
 .dropdown-menu {
@@ -259,8 +250,8 @@ body {
 
 .naivgation-header .dropdown-item {
     color: #6F7784;
-    padding:7px  10px !important;
-    border-radius:6px;
+    padding: 7px 10px !important;
+    border-radius: 6px;
     font-weight: 500;
     transition: 0.3s ease all;
     font-family: Inter;
@@ -270,18 +261,20 @@ body {
 .naivgation-header .dropdown-item:hover {
     background-color: #3684A4 !important;
     color: #FFFFFF !important;
-    border-radius:6px;
+    border-radius: 6px;
     transition: 0.3s ease;
     font-weight: 500;
 }
+
 .naivgation-header .dropdown-item:hover svg path {
-   stroke: white!important;
-   transition:0.1s ease;
+    stroke: white !important;
+    transition: 0.1s ease;
 }
- .dropdown-item:hover svg path {
-    stroke: white!important;
-    transition:0.3s ease;
- }
+
+.dropdown-item:hover svg path {
+    stroke: white !important;
+    transition: 0.3s ease;
+}
 
 .dashbord-2 .naivgation-header {
     width: 100%;
@@ -296,14 +289,15 @@ body {
     height: 76px;
     margin: 24px 24px;
     border-radius: 8px;
-    transition:0.7s ease;
+    transition: 0.7s ease;
 }
 
-.navbar-scroll .naivgation-header{
+.navbar-scroll .naivgation-header {
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     margin-top: 0px;
     transition: 0.7s ease;
-    width: calc(100% - 308px);;
+    width: calc(100% - 308px);
+    ;
 }
 
 .header-title {
@@ -325,7 +319,6 @@ body {
     line-height: 18px;
     font-weight: 500;
     color: rgba(255, 255, 255, 0.90);
-
 }
 
 .profile .system {
@@ -386,7 +379,6 @@ body {
     background-color: white !important;
 }
 
-
 @media(max-width: 1024px) {
     #nav-toggler {
         display: block;
@@ -425,7 +417,7 @@ body {
         justify-content: center;
         float: right;
         padding: 10px;
-        background: #3684A4 ;
+        background: #3684A4;
         width: 25px;
         height: 25px;
         margin-right: 1px;
@@ -440,7 +432,6 @@ body {
     .dashbord-2 {
         width: 100%;
     }
-
 }
 
 @media(max-width: 768px) {
@@ -452,7 +443,8 @@ body {
     .dashbord-2 .naivgation-header {
         padding: 8px;
     }
-    .dashboard-content{
+
+    .dashboard-content {
         margin-top: 78px;
     }
 }
@@ -476,5 +468,9 @@ body {
 
     .main-search-bar>div {
         gap: 8px !important;
+    }
+
+    .dashboard-content {
+        margin-top: 65px;
     }
 }
