--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -379,6 +379,15 @@ body {
     background-color: white !important;
 }
 
+.accordion_button-active.accordion-button:not(.collapsed)::after {
+    transform: rotate(360deg);
+}
+
+.accordion_button-active.accordion-button::after {
+    background-image: url('../images/employer-ease-pics/chevron-up-white.svg') !important;
+    transform: rotate(180deg);
+}
+
 @media(max-width: 1024px) {
     #nav-toggler {
         display: block;
